perf: cache Kafka AdminClient, remove consumer churn, consolidate queries, improve Apollo caching
- Cache and reuse AdminClient instances to avoid expensive connection churn; add lifecycle cleanup.
- Replace per-call KafkaConsumer usage with AdminClient.listOffsets for end offsets.
- Consolidate cluster overview data into a single GraphQL query (GET_CLUSTER_OVERVIEW).
- Update Apollo default fetchPolicy to cache-first for better client-side responsiveness.